Fixes wrong redirect url

--- a/templates/blog/blog_post_datalinks/02042016ep1devblog.html
+++ b/templates/blog/blog_post_datalinks/02042016ep1devblog.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <!-- Web metadata (hardcoded in; so manual changes are required) -->
-    <meta property="og:url" content="http://hawsoo.github.io/Portfolio/blog-post.html?post=02042016ep1devblog" />
+    <meta property="og:url" content="http://hawsoo.github.io/Portfolio/templates/blog/blog_post_datalinks/02042016ep1devblog.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Episode 1 of Dev Blog" />
     <meta property="og:description" content="A summary and notes of the first episode on the Youtube Dev Blog! Of course, being the absolute first, the song may be distracting, and my voice may suck, but at least when we start, we set the baseline for improvement. There's so much to see, and going into the second episode will be much better smooth sailing." />
