--- a/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html
+++ b/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <!-- Web metadata (hardcoded in; so manual changes are required) -->
-    <meta property="og:url" content="http://hawsoo.github.io/Portfolio/blog-post.html?post=02052016guidetowebstructure" />
+    <meta property="og:url" content="http://hawsoo.github.io/Portfolio/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A Guide to Designing Website Structure" />
     <meta property="og:description" content="The website you are currently viewing is highly automated. That's the main feature of the design and construction of said website. This guide covers the process of planning and creating this website as well as many techniques and libraries that can be used to make that process even more efficient." />
