Updates descriptions for first 2 blog posts (they're now shorter)

--- a/templates/blog/blog_post_datalinks/02042016ep1devblog.html
+++ b/templates/blog/blog_post_datalinks/02042016ep1devblog.html
@@ -5,7 +5,7 @@
     <meta property="og:url" content="http://hawsoo.github.io/Portfolio/templates/blog/blog_post_datalinks/02042016ep1devblog.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Episode 1 of Dev Blog" />
-    <meta property="og:description" content="A summary and notes of the first episode on the Youtube Dev Blog! Of course, being the absolute first, the song may be distracting, and my voice may suck, but at least when we start, we set the baseline for improvement. There's so much to see, and going into the second episode will be much better smooth sailing." />
+    <meta property="og:description" content="A summary and notes of the first episode on the Youtube Dev Blog!" />
     <meta property="og:image" content="http://www.theartimes.com/wp-content/uploads/2013/03/to_catch_the_moonfish_by_qinni-d5v0kqt-900x300.jpg" />
 
     <title>Redirecting...</title>
