--- a/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html
+++ b/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html
@@ -5,7 +5,7 @@
     <meta property="og:url" content="http://hawsoo.github.io/Portfolio/templates/blog/blog_post_datalinks/02052016guidetowebstructure.html" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A Guide to Designing Website Structure" />
-    <meta property="og:description" content="The website you are currently viewing is highly automated. That's the main feature of the design and construction of said website. This guide covers the process of planning and creating this website as well as many techniques and libraries that can be used to make that process even more efficient." />
+    <meta property="og:description" content="The website you are currently viewing is highly automated. Planning it to act as a regular website proves to be a challenge." />
     <meta property="og:image" content="http://images.fineartamerica.com/images-medium-large-5/colorful-sunrise-reflections-art-photo-download-and-wallpaper-screensaver-geoff-childs.jpg" />
 
     <title>Redirecting...</title>
